--- a/src/app/contact/contact-us.component.html
+++ b/src/app/contact/contact-us.component.html
@@ -1,1 +1,22 @@
 <h2>Contactez-nous</h2>
+
+<form>
+    <div class="form-group">
+        <label for="subject">Sujet</label>
+        <input type="text" class="form-control" id="subject" placeholder="sujet">
+    </div>
+    <div class="form-group">
+        <label for="message">Sujet</label>
+        <textarea class="form-control" id="message" placeholder="votre message">
+        </textarea>
+    </div>
+    <div class="form-group">
+        <label for="service">Sujet</label>
+        <select id="service" class="form-control">
+            <option value="tech">Technique</option>
+            <option value="sales">Commercial</option>
+            <option value="guide">Guide moyenne montagne</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-default">Envoyer</button>
+</form>
