--- a/src/app/contact/contact-us.component.html
+++ b/src/app/contact/contact-us.component.html
@@ -1,18 +1,18 @@
 <h2>Contactez-nous</h2>
 
-<form>
+<form #form="ngForm">
     <div class="form-group">
         <label for="subject">Sujet</label>
-        <input type="text" class="form-control" id="subject" placeholder="sujet">
+        <input type="text" ngModel name="subject" class="form-control" id="subject" placeholder="sujet">
     </div>
     <div class="form-group">
         <label for="message">Sujet</label>
-        <textarea class="form-control" id="message" placeholder="votre message">
+        <textarea class="form-control" ngModel name="message" id="message" placeholder="votre message">
         </textarea>
-    </div>
+    </div> 
     <div class="form-group">
         <label for="service">Sujet</label>
-        <select id="service" class="form-control">
+        <select id="service" ngModel name="service" class="form-control">
             <option value="tech">Technique</option>
             <option value="sales">Commercial</option>
             <option value="guide">Guide moyenne montagne</option>
@@ -20,3 +20,5 @@
     </div>
     <button type="submit" class="btn btn-default">Envoyer</button>
 </form>
+
+Form : {{ form.value | json}}
