--- a/src/app/contact/contact-us.component.html
+++ b/src/app/contact/contact-us.component.html
@@ -2,7 +2,7 @@
 
 <form #form="ngForm" (submit)="sendMessage(form)" novalidate>
     <div class="form-group"
-    [class.has-error]="msgSubject.invalid && msgSubject.touched">
+        [class.has-error]="msgSubject.invalid && msgSubject.touched">
         <label for="subject" class="control-label">Sujet</label>
         <input type="text" 
             #msgSubject="ngModel"
@@ -14,10 +14,13 @@
             placeholder="sujet">
             <div *ngIf="msgSubject.invalid && msgSubject.touched">Sujet manquant</div>
     </div>
-    <div class="form-group">
-        <label for="message">Sujet</label>
+    <div class="form-group"
+        [class.has-error]="msgContent.invalid && msgContent.touched">
+        <label for="message" class="control-label">Message</label>
         <textarea class="form-control" 
-            ngModel 
+            #msgContent="ngModel"
+            ngModel
+            required
             name="message" 
             id="message" 
             placeholder="votre message">
@@ -25,15 +28,13 @@
     </div> 
     <div class="form-group">
         <label for="service">Service</label>
-        <select id="service" ngModel name="service" class="form-control">
+        <select id="service" ngModel name="service" class="form-control" required>
             <option value="tech">Technique</option>
             <option value="sales">Commercial</option>
             <option value="guide">Guide moyenne montagne</option>
         </select>
     </div>
-    <button type="submit" class="btn btn-default">Envoyer</button>
+    <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Envoyer</button>
 </form>
 
-Form : {{ form.value | json}}
-<br>
-Sujet : {{ msgSubject.valid }}
+Form : {{ form.valid | json}}
