Insertion d'Output pour ajouter une randonnée à sa todolist

--- a/src/app/hike/hike-summary.component.html
+++ b/src/app/hike/hike-summary.component.html
@@ -4,5 +4,8 @@
     </div>
     <div class="panel-body">
         {{ rando.description }}
+        <br>
+        <input type="checkbox"
+            (change)="toggleAsTodoHike($event.target.checked)"> à faire
     </div>
 </div>
