--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,17 @@
   Bienvenue sur le site du développeur/randonneur !
 </h1>
 <div>
-    Toute la journée assis dans un open space ?
-    <br>Il est temps de prendre l'air et d'aller randonner !!!
+  Toute la journée assis dans un open space ?
+  <br>Il est temps de prendre l'air et d'aller randonner !!!
 </div>
 
-<button (click)="toggle()">Ouvrir / Fermer</button>
+<button (click)="toggle()" *ngIf="!open" class="btn btn-primary">Ouvrir</button>
+<button (click)="toggle()" *ngIf="open" class="btn btn-warning">Fermer</button>
 
-<div [@toggleElement]="toggleElement">Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</div>
+<div [@toggleElement]="toggleElement">Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell
+  who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!
+  I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass. You think water moves
+  fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder.
+  After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know
+  that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd
+  say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</div>
