--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,7 @@
     </div><!--/.nav-collapse -->
     </div>
 </nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
