Remontée d'événements depuis l'animation en keyframes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,10 @@
 <div class="row">
   <h3>Citations</h3>
   <div class="frame col-md-6">
-    <div class="citation" [@animateCitation]="animateCitation">
+    <div class="citation" [@animateCitation]="animateCitation"
+                          (@animateCitation.start)="log($event)"
+                          (@animateCitation.done)="log($event)"
+    >
       {{ quote.text }}
       <br>
       <em>{{ quote.author }}</em>
