Ajout de l'API Angular Google Maps (AGM)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
         <li><a [routerLink]="['/']">Accueil</a></li>
         <li><a [routerLink]="['/hikes']">Randonnées</a></li>
         <li><a [routerLink]="['/contact']">Contact</a></li>
+        <li><a [routerLink]="['/map']">Carte</a></li>
         </ul>
     </div><!--/.nav-collapse -->
     </div>
