--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,10 @@
 <div class="row">
     <h2>Carte de la prochaine randonnée</h2>
+
+    <div>
+        <button (click)="geocode()">Localiser</button>
+    </div>
+
     <sebm-google-map [latitude]="lat" [longitude]="lng">
         <sebm-google-map-marker
             [latitude]="lat"
