Ajouter des markers à partir des lat/lng et applicationref tick pour détecter les changements sur l'api

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -12,6 +12,12 @@
             [markerDraggable]="true"
             (dragEnd)="onCoordMarkerDropped($event)"
             ></sebm-google-map-marker>
+
+        <sebm-google-map-marker *ngFor="let m of markers"
+            [latitude]="m.lat"
+            [longitude]="m.lng"
+            [markerDraggable]="m.draggable"
+            ></sebm-google-map-marker>
     </sebm-google-map>
 
     <div *ngIf="!markerWasDropped">
