Effacer un itinéraire existant et ses markers

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -10,6 +10,8 @@
             [(ngModel)]="startingPoint"
            >
         <button class="btn btn-primary" (click)="geocode()">Localiser</button>
+        <button class="btn btn-danger" (click)="resetStartingPoint()">Remise à zéro</button>
+
     </div>
 
     <br>
